# azure-sdk-for-rust

sdk/openai/: Cargo.toml  README.md
sdk/openai/examples/: completions.rs  completions_blocking.rs
sdk/openai/src/: lib.rs
sdk/openai/src/client/: blocking.rs  mod.rs
sdk/openai/src/models/: completions.rs
