[package]
name = "openai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = { path = "../core", version = "0.8" }
reqwest = { version = "0.11" }
tokio = { version = "1" , features = ["full"] }
azure_identity = { path = "../identity", version="0.9", default_features = false }

[features]
blocking = ["reqwest/blocking"]
